The previous update removed the spacing between the site header and the homepage's main cotnent. This fixes the issue.

--- a/app/scss/layout/main.scss
+++ b/app/scss/layout/main.scss
@@ -12,3 +12,7 @@
 main.site-main {
     flex-grow: 1;
 }
+
+main.site-main--front-page {
+    margin-top: var(--wp--preset--spacing--x-large);
+}
